# learnr

./: .gitignore  README.md  flake.nix  pyproject.toml
learnr/: bootstrap.py  db.py  importer.py  main.py  models.py  review_queries.py  scheduler.py  schemas.py  settings.py
learnr/routes/: __init__.py  decks.py  imports.py  review_sessions.py
learnr/starter_decks/: __init__.py  goethe_a1_wordlist.csv
learnr/static/: api.js  app.js  index.html  styles.css  swipe-card.js
nix/: module.nix  package.nix
tests/: test_api.py  test_bootstrap.py  test_importer.py  test_scheduler.py
