[project]
name = "learnr"
version = "0.1.0"
description = "Swipe-based spaced repetition vocabulary trainer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["learnr"]
artifacts = ["learnr/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
