[project]
name = "learnr"
version = "0.1.0"
description = "Swipe-based spaced repetition vocabulary trainer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "ruff>=0.15.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["learnr"]
artifacts = ["learnr/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "E",   # flake8
    "F",   # pyflakes
    "I",   # isort
    "S",   # bandit
    "ANN", # flake8 annotations
    "PTH", # flake8 pathlib
]
ignore = [
    "ANN003", # **kwargs annotation
    "PTH123", # built-in open
]
unfixable = ["F401"] # unused import (don't remove on file save)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow asserts
    "ANN201", # Return type annotation
]
